tests/files/parser_tests/should_fail/085.cmdr
//Should not parse string interpolation due to statement instead of expression
x = "${do { x= 5; } (true) }";
